Bug 15236 - smbd crashes if an FSCTL request is done on a stream handle.
Summary: smbd crashes if an FSCTL request is done on a stream handle.
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: 4.17.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-11-10 22:40 UTC by Jeremy Allison
Modified: 2026-02-11 13:11 UTC (History)
3 users (show)

See Also:


Attachments
git-am fix for master. (7.04 KB, patch)
2022-11-10 22:54 UTC, Jeremy Allison
no flags Details
git-am fix for master. (7.09 KB, patch)
2022-11-11 00:17 UTC, Jeremy Allison
no flags Details
git-am fix for master. (7.37 KB, patch)
2022-11-11 19:06 UTC, Jeremy Allison
no flags Details
git-am fix for 4.17.next. (7.67 KB, patch)
2022-11-14 19:33 UTC, Jeremy Allison
slow: review+
Details
git-am fix for 4.16.next. (7.67 KB, patch)
2022-11-14 19:46 UTC, Jeremy Allison
slow: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jeremy Allison 2022-11-10 22:40:19 UTC
Have test and fix, need bugid.
Comment 1 Jeremy Allison 2022-11-10 22:54:54 UTC
Created attachment 17644 [details]
git-am fix for master.

This is what I'm planning to put in ci.
Comment 2 Jeremy Allison 2022-11-11 00:17:52 UTC
Created attachment 17645 [details]
git-am fix for master.

Make sure fsp != NULL before calling metadata_fsp() :-).
Comment 3 Jeremy Allison 2022-11-11 19:06:39 UTC
Created attachment 17646 [details]
git-am fix for master.

Third time's the charm for ci :-).
Comment 4 Samba QA Contact 2022-11-14 18:14:04 UTC
This bug was referenced in samba master:

abc4495e4591964bb4625c2669a1f84213faab77
fa4eba131b882c3858b28f5fd9864998e19a4510
Comment 5 Jeremy Allison 2022-11-14 19:33:21 UTC
Created attachment 17650 [details]
git-am fix for 4.17.next.

Cherry-picked from master.
Comment 6 Jeremy Allison 2022-11-14 19:46:53 UTC
Created attachment 17651 [details]
git-am fix for 4.16.next.

Back-ported from master.
Comment 7 Ralph Böhme 2023-01-13 18:30:11 UTC
Reassigning to Jule for inclusion in 4.16 and 4.17.
Comment 8 Jule Anger 2023-01-23 09:28:01 UTC
Pushed to autobuild-v4-{17,16}-test.
Comment 9 Samba QA Contact 2023-01-23 10:28:28 UTC
This bug was referenced in samba v4-17-test:

cd3479c64a838417d4f3f1d8dfd8f180c819b6a3
f0729d7a72d4297a04faf8b20d2ea1a34aa70940
Comment 10 Samba QA Contact 2023-01-23 11:00:07 UTC
This bug was referenced in samba v4-16-test:

c6733cbe872d07825033b084a0f0cb9240459872
1189604995793b1b5345ffad570688388f9248a8
Comment 11 Jule Anger 2023-01-23 11:48:49 UTC
Closing out bug report.

Thanks!
Comment 12 Samba QA Contact 2023-01-26 17:51:02 UTC
This bug was referenced in samba v4-17-stable (Release samba-4.17.5):

cd3479c64a838417d4f3f1d8dfd8f180c819b6a3
f0729d7a72d4297a04faf8b20d2ea1a34aa70940
Comment 13 Samba QA Contact 2023-02-16 16:37:17 UTC
This bug was referenced in samba v4-16-stable (Release samba-4.16.9):

c6733cbe872d07825033b084a0f0cb9240459872
1189604995793b1b5345ffad570688388f9248a8